various quality of life improvements - reduce code element font size in nav to prevent overflow (also add font-stretch: condensed; which does nothing for me but will hopefully work for someone) - create hr element in js since it was removed from html - fix " — dennispedia" appearing twice in title - fix extra slashes appearing in url when navigating between articles with js enabled on github pages - create search box in js instead of having it in html but hidden - add front page to nav - change headings in nav to list elements

--- a/docs.css
+++ b/docs.css
@@ -25,6 +25,9 @@
 	nav ul {
 		padding-left: 1em;
 	}
+	nav code {
+		font-size: 90%;
+	}
 	nav + hr {
 		display: none;
 	}
